--- a/src/main/resources/windows/MainWindow.fxml
+++ b/src/main/resources/windows/MainWindow.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -9,9 +12,20 @@
    <children>
       <Pane layoutX="1.0" layoutY="-1.0" prefHeight="400.0" prefWidth="600.0">
          <children>
-            <TextArea fx:id="textAreaInfo" layoutX="5.0" layoutY="7.0" prefHeight="347.0" prefWidth="589.0" scrollLeft="10.0" />
+            <TextArea fx:id="textAreaInfo" layoutX="5.0" layoutY="41.0" prefHeight="313.0" prefWidth="589.0" scrollLeft="10.0" />
             <Button fx:id="buttonConnection" layoutX="6.0" layoutY="359.0" mnemonicParsing="false" onAction="#buttonConnectionOnClick" text="Подключиться к БД" />
             <Button fx:id="buttonDisconnect" layoutX="156.0" layoutY="359.0" mnemonicParsing="false" onAction="#buttonDisconnectOnClick" text="Отключиться от БД" />
+            <MenuBar accessibleRole="BUTTON" layoutX="3.0" layoutY="7.0" prefHeight="29.0" prefWidth="589.0">
+              <menus>
+                  <Menu mnemonicParsing="false" text="Menu">
+                     <items>
+                        <MenuItem fx:id="settings" mnemonicParsing="false" onAction="#settingsOnClick" text="Settings" />
+                    <MenuItem fx:id="about" mnemonicParsing="false" onAction="#aboutOnClick" text="About" />
+                        <MenuItem fx:id="exit" mnemonicParsing="false" onAction="#exitOnClick" text="Exit" />
+                     </items>
+                  </Menu>
+              </menus>
+            </MenuBar>
          </children>
       </Pane>
    </children>
