--- a/src/main/resources/windows/menu/MainWindow.fxml
+++ b/src/main/resources/windows/menu/MainWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ControllerMainWindow">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.menu.ControllerMainWindow">
    <children>
       <Pane layoutX="1.0" layoutY="-1.0" prefHeight="400.0" prefWidth="600.0">
          <children>
