--- a/src/main/resources/windows/MainWindow.fxml
+++ b/src/main/resources/windows/MainWindow.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
@@ -12,10 +14,7 @@
    <children>
       <Pane layoutX="1.0" layoutY="-1.0" prefHeight="400.0" prefWidth="600.0">
          <children>
-            <TextArea fx:id="textAreaInfo" layoutX="5.0" layoutY="41.0" prefHeight="313.0" prefWidth="589.0" scrollLeft="10.0" />
-            <Button fx:id="buttonConnection" layoutX="6.0" layoutY="359.0" mnemonicParsing="false" onAction="#buttonConnectionOnClick" text="Подключиться к БД" />
-            <Button fx:id="buttonDisconnect" layoutX="156.0" layoutY="359.0" mnemonicParsing="false" onAction="#buttonDisconnectOnClick" text="Отключиться от БД" />
-            <MenuBar accessibleRole="BUTTON" layoutX="3.0" layoutY="7.0" prefHeight="29.0" prefWidth="589.0">
+            <MenuBar accessibleRole="BUTTON" layoutX="5.0" layoutY="7.0" prefHeight="29.0" prefWidth="589.0">
               <menus>
                   <Menu mnemonicParsing="false" text="Menu">
                      <items>
@@ -31,8 +30,72 @@
                         <MenuItem fx:id="testConnectionDataBase" mnemonicParsing="false" onAction="#testConnectionDataBaseOnClick" text="Check DataBase connection" />
                     </items>
                   </Menu>
+                  <Menu mnemonicParsing="false" text="Tables">
+                     <items>
+                        <Menu mnemonicParsing="false" text="Seas">
+                          <items>
+                            <MenuItem fx:id="buttonAddSeas" mnemonicParsing="false" onAction="#buttonAddSeasOnClick" text="Add" />
+                              <MenuItem fx:id="buttonChangeSeas" mnemonicParsing="false" onAction="#buttonChangeSeasOnClick" text="Сhange" />
+                              <MenuItem fx:id="buttonDeleteSeas" mnemonicParsing="false" onAction="#buttonDeleteSeasOnClick" text="Delete" />
+                              <MenuItem mnemonicParsing="false" text="Update" />
+                          </items>
+                        </Menu>
+                        <Menu mnemonicParsing="false" text="Oceans">
+                           <items>
+                              <MenuItem fx:id="buttonAddOceans" mnemonicParsing="false" onAction="#buttonAddOceansOnClick" text="Add" />
+                              <MenuItem fx:id="buttonChangeOceans" mnemonicParsing="false" onAction="#buttonChangeOceansOnClick" text="Сhange" />
+                              <MenuItem fx:id="buttonDeleteOceans" mnemonicParsing="false" onAction="#buttonDeleteOceansOnClick" text="Delete" />
+                              <MenuItem fx:id="buttonUpdateOceans" mnemonicParsing="false" onAction="#buttonUpdateOceansOnClick" text="Update" />
+                           </items>
+                        </Menu>
+                     </items>
+                  </Menu>
               </menus>
             </MenuBar>
+            <TabPane layoutX="5.0" layoutY="37.0" prefHeight="365.0" prefWidth="589.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="Seas">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="332.0" prefWidth="582.0">
+                           <children>
+                              <Pane layoutX="4.0" layoutY="4.0" prefHeight="332.0" prefWidth="589.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <TableView prefHeight="332.0" prefWidth="589.0">
+                                      <columns>
+                                        <TableColumn prefWidth="44.76609659194946" text="id" />
+                                        <TableColumn prefWidth="124.6773796081543" text="Name" />
+                                          <TableColumn prefWidth="91.50265502929688" text="Square" />
+                                          <TableColumn prefWidth="95.974853515625" text="MaxDepth" />
+                                          <TableColumn prefWidth="127.2418212890625" text="Ocean" />
+                                      </columns>
+                                    </TableView>
+                                 </children>
+                              </Pane>
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+                <Tab text="Oceans">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Pane layoutX="4.0" layoutY="4.0" prefHeight="332.0" prefWidth="589.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <TableView prefHeight="331.0" prefWidth="590.0">
+                                      <columns>
+                                        <TableColumn prefWidth="75.0" text="id" />
+                                        <TableColumn prefWidth="129.12181091308594" text="Name" />
+                                          <TableColumn minWidth="0.0" prefWidth="248.56353759765625" text="Description" />
+                                      </columns>
+                                    </TableView>
+                                 </children>
+                              </Pane>
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+              </tabs>
+            </TabPane>
          </children>
       </Pane>
    </children>
